--- a/static/index.html
+++ b/static/index.html
@@ -1,256 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>URL to File Converter</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      .alert-box {
-        background-color: #fed7d7;
-        color: #c53030;
-        padding: 15px;
-        border-radius: 10px;
-        margin-bottom: 20px;
-        border: 1px solid #feb2b2;
-        font-weight: 500;
-        text-align: center;
-        animation: fadeIn 0.3s ease;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>URL to File Converter</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    .alert-box {
+      background-color: #fed7d7;
+      color: #c53030;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #feb2b2;
+      font-weight: 500;
+      text-align: center;
+      animation: fadeIn 0.3s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-5px);
       }
 
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(-5px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
+      to {
+        opacity: 1;
+        transform: translateY(0);
       }
+    }
 
-      body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #333;
-        padding: 20px;
-      }
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #333;
+      padding: 20px;
+    }
 
+    .container {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 500px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 10px;
+      color: #4a5568;
+      font-size: 2.2rem;
+      font-weight: 300;
+    }
+
+    .subtitle {
+      text-align: center;
+      margin-bottom: 35px;
+      color: #718096;
+      font-size: 1rem;
+    }
+
+    .form-group {
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: 600;
+      color: #4a5568;
+      font-size: 1.1rem;
+    }
+
+    .url-input {
+      width: 100%;
+      padding: 16px 20px;
+      border: 2px solid #e2e8f0;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      transition: all 0.3s ease;
+      background: white;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    }
+
+    .url-input:focus {
+      outline: none;
+      border-color: #667eea;
+      box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.1);
+      transform: translateY(-1px);
+    }
+
+    .url-input::placeholder {
+      color: #a0aec0;
+    }
+
+    .format-group {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      margin-bottom: 25px;
+    }
+
+    .format-option {
+      position: relative;
+    }
+
+    .format-option input[type="radio"] {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+    }
+
+    .format-label {
+      display: block;
+      padding: 15px 20px;
+      border: 2px solid #e2e8f0;
+      border-radius: 12px;
+      text-align: center;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-weight: 500;
+      color: #4a5568;
+      background: white;
+    }
+
+    .format-option input[type="radio"]:checked+.format-label {
+      border-color: #667eea;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(102, 126, 234, 0.3);
+    }
+
+    .format-option input[type="radio"]:not(:checked)+.format-label:hover {
+      border-color: #cbd5e0;
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .submit-btn {
+      width: 100%;
+      padding: 18px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+    }
+
+    .submit-btn::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg,
+          transparent,
+          rgba(255, 255, 255, 0.2),
+          transparent);
+      transition: left 0.5s;
+    }
+
+    .submit-btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+    }
+
+    .submit-btn:hover::before {
+      left: 100%;
+    }
+
+    .submit-btn:active {
+      transform: translateY(-1px);
+    }
+
+    .info-box {
+      background: #f7fafc;
+      border-left: 4px solid #667eea;
+      padding: 20px;
+      border-radius: 10px;
+      margin-top: 30px;
+    }
+
+    .info-title {
+      font-weight: 600;
+      color: #4a5568;
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+    }
+
+    .info-text {
+      color: #718096;
+      line-height: 1.6;
+    }
+
+    .example-urls {
+      margin-top: 15px;
+    }
+
+    .example-url {
+      display: block;
+      color: #667eea;
+      text-decoration: none;
+      padding: 5px 0;
+      border-bottom: 1px solid #e2e8f0;
+      font-family: "Courier New", monospace;
+      font-size: 0.9rem;
+    }
+
+    .example-url:hover {
+      color: #764ba2;
+      background: rgba(102, 126, 234, 0.05);
+      padding-left: 10px;
+      transition: all 0.2s ease;
+    }
+
+    @media (max-width: 480px) {
       .container {
-        background: rgba(255, 255, 255, 0.95);
-        backdrop-filter: blur(10px);
-        border-radius: 20px;
-        padding: 40px;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 500px;
-        border: 1px solid rgba(255, 255, 255, 0.2);
+        padding: 25px;
+        margin: 10px;
       }
 
       h1 {
-        text-align: center;
-        margin-bottom: 10px;
-        color: #4a5568;
-        font-size: 2.2rem;
-        font-weight: 300;
-      }
-
-      .subtitle {
-        text-align: center;
-        margin-bottom: 35px;
-        color: #718096;
-        font-size: 1rem;
-      }
-
-      .form-group {
-        margin-bottom: 25px;
-      }
-
-      label {
-        display: block;
-        margin-bottom: 10px;
-        font-weight: 600;
-        color: #4a5568;
-        font-size: 1.1rem;
-      }
-
-      .url-input {
-        width: 100%;
-        padding: 16px 20px;
-        border: 2px solid #e2e8f0;
-        border-radius: 12px;
-        font-size: 1.1rem;
-        transition: all 0.3s ease;
-        background: white;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-      }
-
-      .url-input:focus {
-        outline: none;
-        border-color: #667eea;
-        box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.1);
-        transform: translateY(-1px);
-      }
-
-      .url-input::placeholder {
-        color: #a0aec0;
+        font-size: 1.8rem;
       }
 
       .format-group {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 15px;
-        margin-bottom: 25px;
+        grid-template-columns: 1fr;
       }
-
-      .format-option {
-        position: relative;
-      }
-
-      .format-option input[type="radio"] {
-        position: absolute;
-        opacity: 0;
-        cursor: pointer;
-      }
-
-      .format-label {
-        display: block;
-        padding: 15px 20px;
-        border: 2px solid #e2e8f0;
-        border-radius: 12px;
-        text-align: center;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        font-weight: 500;
-        color: #4a5568;
-        background: white;
-      }
-
-      .format-option input[type="radio"]:checked + .format-label {
-        border-color: #667eea;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        transform: translateY(-2px);
-        box-shadow: 0 8px 20px rgba(102, 126, 234, 0.3);
-      }
-
-      .format-option input[type="radio"]:not(:checked) + .format-label:hover {
-        border-color: #cbd5e0;
-        transform: translateY(-1px);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      }
-
-      .submit-btn {
-        width: 100%;
-        padding: 18px;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-        border: none;
-        border-radius: 12px;
-        font-size: 1.2rem;
-        font-weight: 600;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        position: relative;
-        overflow: hidden;
-        box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
-      }
-
-      .submit-btn::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(
-          90deg,
-          transparent,
-          rgba(255, 255, 255, 0.2),
-          transparent
-        );
-        transition: left 0.5s;
-      }
-
-      .submit-btn:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
-      }
-
-      .submit-btn:hover::before {
-        left: 100%;
-      }
-
-      .submit-btn:active {
-        transform: translateY(-1px);
-      }
-
-      .info-box {
-        background: #f7fafc;
-        border-left: 4px solid #667eea;
-        padding: 20px;
-        border-radius: 10px;
-        margin-top: 30px;
-      }
-
-      .info-title {
-        font-weight: 600;
-        color: #4a5568;
-        margin-bottom: 10px;
-        font-size: 1.1rem;
-      }
-
-      .info-text {
-        color: #718096;
-        line-height: 1.6;
-      }
-
-      .example-urls {
-        margin-top: 15px;
-      }
-
-      .example-url {
-        display: block;
-        color: #667eea;
-        text-decoration: none;
-        padding: 5px 0;
-        border-bottom: 1px solid #e2e8f0;
-        font-family: "Courier New", monospace;
-        font-size: 0.9rem;
-      }
-
-      .example-url:hover {
-        color: #764ba2;
-        background: rgba(102, 126, 234, 0.05);
-        padding-left: 10px;
-        transition: all 0.2s ease;
-      }
-
-      @media (max-width: 480px) {
-        .container {
-          padding: 25px;
-          margin: 10px;
-        }
-
-        h1 {
-          font-size: 1.8rem;
-        }
-
-        .format-group {
-          grid-template-columns: 1fr;
-        }
-      }
-    </style>
-  </head>
-  <div id="loadingOverlay" style="
+    }
+  </style>
+</head>
+<div id="loadingOverlay" style="
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
@@ -265,105 +266,117 @@
   ⏳ Processing... Please wait.
 </div>
 
-  <body>
-    <div class="container">
-      <h1>URL Converter</h1>
-      <p class="subtitle">Convert any URL to a downloadable file</p>
-      <div id="alertBox" class="alert-box" style="display: none">
-        <span id="alertMessage">Invalid URL</span>
-      </div>
-
-      <form id="urlForm">
-        <div class="form-group">
-          <label for="url">Enter URL:</label>
-          <input
-            type="url"
-            id="url"
-            name="url"
-            class="url-input"
-            placeholder="https://example.com/page"
-            required
-          />
-        </div>
-
-        <button type="submit" class="submit-btn">Convert & Download</button>
-      </form>
-
-      <div class="info-box">
-        <div class="info-title">How it works</div>
-        <div class="info-text">
-          Simply paste any URL above, choose your preferred output format, and
-          click convert. The server will process the webpage and return it as a
-          downloadable file.
-        </div>
-        <div class="example-urls"></div>
-      </div>
+<body>
+  <div class="container">
+    <h1>URL Converter</h1>
+    <p class="subtitle">Convert any URL to a downloadable file</p>
+    <div id="alertBox" class="alert-box" style="display: none">
+      <span id="alertMessage">Invalid URL</span>
     </div>
-  </body>
+
+    <form id="urlForm">
+      <div class="form-group">
+        <label for="url">Enter URL:</label>
+        <input type="url" id="url" name="url" class="url-input" placeholder="https://example.com/page" required />
+      </div>
+      <div class="format-group">
+        <div class="format-option">
+          <input type="radio" name="bitrate" id="b128" value="128">
+          <label for="b128" class="format-label">128 kbps</label>
+        </div>
+        <div class="format-option">
+          <input type="radio" name="bitrate" id="b192" value="192">
+          <label for="b192" class="format-label">192 kbps</label>
+        </div>
+        <div class="format-option">
+          <input type="radio" name="bitrate" id="b256" value="256">
+          <label for="b256" class="format-label">256 kbps</label>
+        </div>
+        <div class="format-option">
+          <input type="radio" name="bitrate" id="b320" value="320">
+          <label for="b320" class="format-label">320 kbps</label>
+        </div>
+      </div>
+      <button type="submit" class="submit-btn">Convert & Download</button>
+    </form>
+
+    <div class="info-box">
+      <div class="info-title">How it works</div>
+      <div class="info-text">
+        Simply paste any URL above, choose your preferred output format, and
+        click convert. The server will process the webpage and return it as a
+        downloadable file.
+      </div>
+      <div class="example-urls"></div>
+    </div>
+  </div>
+</body>
+
 </html>
 <script>
-document
-  .getElementById("urlForm")
-  .addEventListener("submit", async function (e) {
-    e.preventDefault();
+  document
+    .getElementById("urlForm")
+    .addEventListener("submit", async function (e) {
+      e.preventDefault();
 
-    const form = document.getElementById("urlForm");
-    const formData = new FormData(form);
+      const form = document.getElementById("urlForm");
+      const formData = new FormData(form);
+      const bitrate = document.querySelector('input[name="bitrate"]:checked');
+      const alertBox = document.getElementById("alertBox");
+      const alertMessage = document.getElementById("alertMessage");
+      const loader = document.getElementById("loadingOverlay");
+console.log(formData.get("bitrate")); // "128", "192", "256", or "320"
 
-    const alertBox = document.getElementById("alertBox");
-    const alertMessage = document.getElementById("alertMessage");
-    const loader = document.getElementById("loadingOverlay");
+      alertBox.style.display = "none";
+      loader.style.display = "flex"; // Show loader
 
-    alertBox.style.display = "none";
-    loader.style.display = "flex"; // Show loader
+      try {
+        const response = await fetch("/api/download", {
+          method: "POST",
+          body: formData,
+        });
 
-    try {
-      const response = await fetch("/api/download", {
-        method: "POST",
-        body: formData,
-      });
+        const contentType = response.headers.get("content-type");
 
-      const contentType = response.headers.get("content-type");
+        if (contentType && contentType.includes("application/json")) {
+          const data = await response.json();
+          if (data.response === "invalid URL") {
+            alertMessage.textContent =
+              "❌ Invalid URL provided. Please check and try again.";
+            alertBox.style.display = "block";
+            return;
+          }
+        } else {
+          const disposition = response.headers.get("Content-Disposition");
+          let filename = "downloaded_file";
+          console.log("Content-Disposition:", disposition);
 
-      if (contentType && contentType.includes("application/json")) {
-        const data = await response.json();
-        if (data.response === "invalid URL") {
-          alertMessage.textContent =
-            "❌ Invalid URL provided. Please check and try again.";
-          alertBox.style.display = "block";
-          return;
+          if (disposition) {
+            const utf8FilenameMatch = disposition.match(/filename\*=utf-8''(.+)/i);
+            const asciiFilenameMatch = disposition.match(/filename="?([^"]+)"?/);
+
+            if (utf8FilenameMatch) {
+              filename = decodeURIComponent(utf8FilenameMatch[1]);
+            } else if (asciiFilenameMatch) {
+              filename = asciiFilenameMatch[1];
+            }
+          }
+
+          const blob = await response.blob();
+          const link = document.createElement("a");
+          link.href = window.URL.createObjectURL(blob);
+          link.download = filename;
+          document.body.appendChild(link);
+          link.click();
+          link.remove();
         }
-      } else {
-        const disposition = response.headers.get("Content-Disposition");
-        let filename = "downloaded_file";
-        console.log("Content-Disposition:", disposition);
-
-       if (disposition) {
-  const utf8FilenameMatch = disposition.match(/filename\*=utf-8''(.+)/i);
-  const asciiFilenameMatch = disposition.match(/filename="?([^"]+)"?/);
-
-  if (utf8FilenameMatch) {
-    filename = decodeURIComponent(utf8FilenameMatch[1]);
-  } else if (asciiFilenameMatch) {
-    filename = asciiFilenameMatch[1];
-  }
-} 
-
-        const blob = await response.blob();
-        const link = document.createElement("a");
-        link.href = window.URL.createObjectURL(blob);
-        link.download = filename;
-        document.body.appendChild(link);
-        link.click();
-        link.remove();
+      } catch (err) {
+        console.error("Error during fetch:", err);
+        alertMessage.textContent =
+          "⚠️ Something went wrong. Please try again later.";
+        alertBox.style.display = "block";
+      } finally {
+        loader.style.display = "none"; // Always hide loader
       }
-    } catch (err) {
-      console.error("Error during fetch:", err);
-      alertMessage.textContent =
-        "⚠️ Something went wrong. Please try again later.";
-      alertBox.style.display = "block";
-    } finally {
-      loader.style.display = "none"; // Always hide loader
-    }
-  });
+    });
 </script>
