--- a/static/index.html
+++ b/static/index.html
@@ -285,7 +285,7 @@
     <div class="info-box">
       <div class="info-title">How it works</div>
       <div class="info-text">
-        Simply paste any URL above, choose your preferred output format, and
+        Simply paste any URL above and
         click convert. The server will process the webpage and return it as a
         downloadable file.
       </div>
